--- a/android/.gitignore
+++ b/android/.gitignore
@@ -7,8 +7,5 @@ gradle-wrapper.jar
 GeneratedPluginRegistrant.java
 .cxx/
 
-# Remember to never publicly share your keystore.
-# See https://flutter.dev/to/reference-keystore
+# key.properties 包含密码，不要提交
 key.properties
-**/*.keystore
-**/*.jks
